{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 116,
  "lineage": "3f6afaf4-7546-ebec-5a02-a981ef91e0c5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e587a84b791549af",
            "arn": "arn:aws:ec2:us-west-2:528005785618:elastic-ip/eipalloc-0e587a84b791549af",
            "association_id": "eipassoc-0fa5543c97e5a29af",
            "domain": "vpc",
            "id": "eipalloc-0e587a84b791549af",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0334ba71643926f15",
            "private_dns": "ip-10-0-1-58.us-west-2.compute.internal",
            "private_ip": "10.0.1.58",
            "public_dns": "ec2-52-26-144-5.us-west-2.compute.amazonaws.com",
            "public_ip": "52.26.144.5",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0429bb7e4506b90b2",
            "arn": "arn:aws:ec2:us-west-2:528005785618:elastic-ip/eipalloc-0429bb7e4506b90b2",
            "association_id": "eipassoc-07fc1b66f1cd13cc9",
            "domain": "vpc",
            "id": "eipalloc-0429bb7e4506b90b2",
            "network_border_group": "us-west-2",
            "network_interface": "eni-08592b536e0c52283",
            "private_dns": "ip-10-0-2-104.us-west-2.compute.internal",
            "private_ip": "10.0.2.104",
            "public_dns": "ec2-52-24-111-239.us-west-2.compute.amazonaws.com",
            "public_ip": "52.24.111.239",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:528005785618:internet-gateway/igw-0796afaac0786e53b",
            "id": "igw-0796afaac0786e53b",
            "owner_id": "528005785618",
            "tags": {
              "Name": "pdfquery-igw"
            },
            "tags_all": {
              "Name": "pdfquery-igw"
            },
            "vpc_id": "vpc-0895c6c3d35c51f0d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e587a84b791549af",
            "association_id": "eipassoc-0fa5543c97e5a29af",
            "connectivity_type": "public",
            "id": "nat-097eb2ec388e07888",
            "network_interface_id": "eni-0334ba71643926f15",
            "private_ip": "10.0.1.58",
            "public_ip": "52.26.144.5",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02c873959ead78a22",
            "tags": {
              "Name": "pdfquery-nat-1"
            },
            "tags_all": {
              "Name": "pdfquery-nat-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0429bb7e4506b90b2",
            "association_id": "eipassoc-07fc1b66f1cd13cc9",
            "connectivity_type": "public",
            "id": "nat-083677d8d691f57aa",
            "network_interface_id": "eni-08592b536e0c52283",
            "private_ip": "10.0.2.104",
            "public_ip": "52.24.111.239",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01cef5f78b36b8409",
            "tags": {
              "Name": "pdfquery-nat-2"
            },
            "tags_all": {
              "Name": "pdfquery-nat-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:528005785618:route-table/rtb-0d99f2fdcf45a29a7",
            "id": "rtb-0d99f2fdcf45a29a7",
            "owner_id": "528005785618",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-097eb2ec388e07888",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0895c6c3d35c51f0d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:528005785618:route-table/rtb-0c63dd0b9602f53f5",
            "id": "rtb-0c63dd0b9602f53f5",
            "owner_id": "528005785618",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-083677d8d691f57aa",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0895c6c3d35c51f0d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:528005785618:route-table/rtb-0c9274ec5c84b980d",
            "id": "rtb-0c9274ec5c84b980d",
            "owner_id": "528005785618",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0796afaac0786e53b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0895c6c3d35c51f0d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0df8b9b4677cdb1",
            "route_table_id": "rtb-0d99f2fdcf45a29a7",
            "subnet_id": "subnet-004d36654b59f1469"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0330d5004bf6adfa5",
            "route_table_id": "rtb-0c63dd0b9602f53f5",
            "subnet_id": "subnet-0818a36f15897354c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b084f711be04df4",
            "route_table_id": "rtb-0c9274ec5c84b980d",
            "subnet_id": "subnet-02c873959ead78a22"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011135368313b4b22",
            "route_table_id": "rtb-0c9274ec5c84b980d",
            "subnet_id": "subnet-01cef5f78b36b8409"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:528005785618:security-group/sg-07f658278fbdeb38e",
            "description": "Allow inbound traffic for the Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07f658278fbdeb38e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "pdfquery-alb-sg",
            "name_prefix": "",
            "owner_id": "528005785618",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pdfquery-alb-sg"
            },
            "tags_all": {
              "Name": "pdfquery-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0895c6c3d35c51f0d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:528005785618:security-group/sg-07652137ce0846f8b",
            "description": "Allow inbound traffic to the ECS application container",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07652137ce0846f8b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07f658278fbdeb38e"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "pdfquery-ecs-sg",
            "name_prefix": "",
            "owner_id": "528005785618",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pdfquery-ecs-sg"
            },
            "tags_all": {
              "Name": "pdfquery-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0895c6c3d35c51f0d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "opensearch_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:528005785618:security-group/sg-00031a4dee0449bb7",
            "description": "Allow traffic from ECS to OpenSearch on port 443 (HTTPS)",
            "egress": [],
            "id": "sg-00031a4dee0449bb7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07652137ce0846f8b"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "pdfquery-opensearch-sg",
            "name_prefix": "",
            "owner_id": "528005785618",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0895c6c3d35c51f0d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:528005785618:security-group/sg-0cf5803848b4c017b",
            "description": "Allow traffic from ECS to RDS on port 5432 (PostgreSQL)",
            "egress": [],
            "id": "sg-0cf5803848b4c017b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07652137ce0846f8b"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "pdfquery-rds-sg",
            "name_prefix": "",
            "owner_id": "528005785618",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0895c6c3d35c51f0d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:528005785618:subnet/subnet-004d36654b59f1469",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004d36654b59f1469",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "528005785618",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pdfquery-private-subnet-1"
            },
            "tags_all": {
              "Name": "pdfquery-private-subnet-1"
            },
            "vpc_id": "vpc-0895c6c3d35c51f0d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:528005785618:subnet/subnet-0818a36f15897354c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0818a36f15897354c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "528005785618",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pdfquery-private-subnet-2"
            },
            "tags_all": {
              "Name": "pdfquery-private-subnet-2"
            },
            "vpc_id": "vpc-0895c6c3d35c51f0d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:528005785618:subnet/subnet-02c873959ead78a22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c873959ead78a22",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "528005785618",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pdfquery-public-subnet-1"
            },
            "tags_all": {
              "Name": "pdfquery-public-subnet-1"
            },
            "vpc_id": "vpc-0895c6c3d35c51f0d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:528005785618:subnet/subnet-01cef5f78b36b8409",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01cef5f78b36b8409",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "528005785618",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pdfquery-public-subnet-2"
            },
            "tags_all": {
              "Name": "pdfquery-public-subnet-2"
            },
            "vpc_id": "vpc-0895c6c3d35c51f0d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:528005785618:vpc/vpc-0895c6c3d35c51f0d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01234697c597400b7",
            "default_route_table_id": "rtb-0be95928dddb6e43c",
            "default_security_group_id": "sg-029d4657b2188f836",
            "dhcp_options_id": "dopt-0c02db48e43ff9844",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0895c6c3d35c51f0d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0be95928dddb6e43c",
            "owner_id": "528005785618",
            "tags": {
              "Name": "pdfquery-vpc"
            },
            "tags_all": {
              "Name": "pdfquery-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}